<resources>
    <string name="app_name">Inventory App</string>
    <string name="inventory_app">Inventory App</string>
    <string name="welcome">Welcome Back!</string>
    <string name="please_log_in">Please log in</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="login">Login</string>
    <string name="or_login_with">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here!</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login_here">Login here</string>
    <string name="all_items">All Items</string>
    <string name="qy_20">Qy: 20</string>
    <string name="fair">Fair</string>
    <string name="overview">DASHBOARD</string>
    <string name="profile">Profile</string>
    <string name="add_item">Add Item</string>
    <string name="search_item">Search Item</string>
    <string name="menu">Menu</string>
    <string name="dashboard">This is your Dashboard</string>
    <string name="settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="submit">Submit</string>
    <string name="my_profile">My Profile</string>
    <string name="my_information">My Information</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="sms_notifications">Enable SMS Notifications</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="add_categories">Add Categories</string>
    <string name="category">Category</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="add_category_title">Add Category</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="dashboard_menu">Dashboard</string>
    <string name="select_category">Select Category</string>
    <string name="deleteCategory">Delete Category</string>
    <string name="updateCategory">Update Category</string>
    <string name="forgot_password_email">Please enter the email you used to register</string>
</resources>