<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_category"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_name"
        android:paddingTop="16dp"/>

    <Button
        android:id="@+id/buttonDeleteCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteCategory"
        android:background="?attr/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonSaveCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateCategory"
        android:background="?attr/colorSecondary"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"/>
</LinearLayout>