<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/my_secondary"
        android:text="@string/enter_item_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:textSize="18sp"
        android:hint="@string/category" />

    <Button
        android:id="@+id/submit_button"

        android:layout_width="match_parent"
        android:background="@color/my_secondary"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
</LinearLayout>
