<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="85dp"
            android:layout_height="79dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/profile_icon"
            app:tint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_toEndOf="@+id/logo"
            android:layout_centerVertical="true"
            android:textSize="28sp"
            android:textColor="@color/white" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_information"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:alpha="0.7"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileUsernameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:alpha="0.7" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:alpha="0.7"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileEmailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:alpha="0.7" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:alpha="0.7"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/resetPasswordButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/my_primary"
                android:textColor="@color/white"
                android:text="@string/reset_password" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/my_secondary"
                android:textColor="@color/white"
                android:text="@string/logout" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
